# bayesian-modelling

./: .gitignore  README.md  bayesian.ipynb  ev-adoption.ipynb  pyproject.toml
notebook/: bayesian-modelling-01.ipynb
