[project]
name = "bayesian-modelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "arviz>=0.22.0",
    "great-tables>=0.19.0",
    "ipywidgets>=8.1.7",
    "notebook>=7.4.7",
    "pymc>=5.25.1",
    "scienceplots>=2.1.1",
    "seaborn>=0.13.2",
    "vl-convert-python>=1.8.0",
]
